# ai-compliance-engine

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  agentrouter.sh  docker-compose.yml  pitch_script.md  pyproject.toml
.claude/: settings.local.json
backend/: Dockerfile
backend/app/: init_db.py  main.py
backend/app/api/: routes.py
backend/app/db/: database.py
backend/app/graph/: cache.py  logging_config.py  neo4j_client.py  seed_graph.py
backend/app/models/: models.py
backend/app/rag/: document_parser.py  embedder.py  knowledge_index.py  llm_content.py
backend/app/services/: compliance_engine.py  generator.py  llm_service.py  quiz_service.py  roadmap_service.py  simulation_service.py  validators.py
backend/tests/: benchmark_neo4j.py  test_api.py  test_compliance.py  test_env.py  test_neo4j.py  test_neo4j_integration.py  test_postgres.py  test_workflow.py
frontend/my-app/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/my-app/app/: layout.tsx  page.tsx
frontend/my-app/components/: ApprovalWorkflow.tsx  DimensionBar.tsx  DimensionCategory.tsx  PlanScorecard.tsx  SavedPlansPanel.tsx  StrengthsWeaknesses.tsx  TooltipExplainer.tsx  Upload.tsx  VersionFooter.tsx
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
