[project]
name = "ai-compliance-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "neo4j>=6.2.0",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
